<resources>
    <string name="app_name">Sayari</string>
    <string name="welcome_screen_1_message">Stay in touch with the latest news from the spaceflight industry</string>
    <string name="welcomeScreen2Txt">Get notified on upcoming launches and events on the go customised to your liking</string>
    <string name="home_txt_bottom_nav">Home</string>
    <string name="updated_timer">   T-%02d:%02d:%02d:%02d</string>

    <!--- nav drawer actions-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="top_news_heading">Featured</string>
    <string name="latest_news_heading">Latest News</string>
    <string name="fake_top_heading_text">Ofcos some fake news title containing information about some spaceflight information on either a mission, launch or an upcoming event.</string>
    <string name="learn_more_button_text">learn more</string>
    <string name="fake_news_sub_heading">Some fake heading title about some launch , event or news coming up.</string>
    <string name="fake_days_subheading">4 days ago</string>
    <string name="net_err_message">Seems like your network is down. Please check your network!</string>
    <string name="retry_button_text">retry</string>
    <string name="move_up_button">start</string>
    <string name="watch_vutton_text">watch stream</string>
    <string name="remind_me_button_text">remind me</string>
    <string name="count_down_timer_text">T-00:00:00:00</string>
    <string name="launch_card_title_text">some title</string>
    <string name="launch_description_text">some description</string>
    <string name="launches_tab_layout">launches tab layout</string>
    <string name="net_err_mess">Could not fetch the launch list. Please check your network or try again.</string>
    <string name="search_app_bar_txt">search</string>
    <string name="no_result_found_err">No results found</string>
    <string name="search_err_message">No result found. Swipe down to refresh or retry your search again.</string>
    <string name="launch_location">launch location</string>
    <string name="date">date</string>
    <string name="mission_orbit">mission orbit</string>
    <string name="status">status</string>
    <string name="mission_status">mission status</string>
    <string name="read_more_button">read more</string>
    <string name="news_title">news title</string>
    <string name="search_hint">search</string>
    <string name="news_error_text">could not fetch any article. please check your network.</string>
    <string name="news_search_error">search result not found. try again or try refreshing.</string>
    <string name="news_heading">News</string>
    <string name="general_err_message">could not fetch results. please check your network or swipe down to refresh</string>
    <string name="the_iss_heading">THE ISS</string>
    <string name="active_txt">active</string>
    <string name="de_orbited_txt">De-orbited</string>
    <string name="vehicle_button_txt">vehicle</string>

    <string name="rating_dialog_text">Enjoying the application? Please feel free to give us your rating. Your feedback is highly appreciated.</string>
    <string name="rate_our_app_headline">Rate Our App</string>

    <string name="about_app_string">Sayari is a spaceflight tracking application that not only gives you real-time and up-to-date information on launches but also keeps you in the loop with the latest spaceflight news across all scopes within the spaceflight industry.</string>

    <string name="about_dev_string">Hi! My name is James , an independent app developer from Mombasa , Kenya. I have more than a year\'s experience developing native mobile applications. You can reach out to me below through my email or follow me on twitter.</string>
    <string name="your_email_hint">your email</string>
    <string name="subject_hint">subject</string>
    <string name="message_hint">message</string>
    <string name="share_button_string">share</string>
    <string name="probability_txt">probability</string>
    <string name="mission_heading">Mission</string>
    <string name="launcher_heading">Launcher</string>
    <string name="crew_on_board_txt">Crew on-board</string>
    <string name="livestream_available_text">Livestream available!</string>
    <string name="spacecraft_heading_txt">Spacecraft</string>
    <string name="agency_text">Agency</string>
    <string name="participants_heading_text">Participants</string>
    <string name="program_heading_txt">Program</string>
    <string name="orbit_subtitle_txt">Orbit :</string>
    <string name="settings_heading">Settings</string>
    <string name="display_subheading">Display</string>
    <string name="light_mode_text">Light mode</string>
    <string name="notifications_subheading">Notifications</string>
    <string name="nots_from_fav_txt">Receive notifications from only your favourite agencies</string>
    <string name="setup_your_favourite_agencies_txt">setup your favourite agencies</string>
    <string name="show_notification_30_min_before_launch">Show notification 30 min before launch</string>
    <string name="show_notification_15_min_before_launch">Show notification 15 min before launch</string>
    <string name="show_notification_5_min_before_launch">Show notification 5 min before launch</string>
    <string name="notification_intervals">Notification intervals</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="view_privacy_policy">View privacy policy</string>
    <string name="agency_search_error">agency name does not appear in our database</string>
    <string name="feature_message">Feature still in development , will be available in the next update</string>
    <string name="application_name">Sayari</string>
    <string name="thank_you_message">Thank you in advance for reaching out. Please leave a suggestion on improvement or ideas that you may have for this app. Also feel free to reach out for contracts or full rime roles. I shall try my best to respond as soon as I can.</string>
    <string name="compsose_txt">Compose</string>
    <string name="watch_string">watch</string>
    <string name="event_description_title_on_card">Event Description</string>
    <string name="continue_scroll"><![CDATA[continue scroll >>>]]></string>
    <string name="vid_err_message">No stream url available yet</string>
    <string name="share_err_mess">No news article on this event available yet</string>
    <string name="linked_in">linked in</string>
    <string name="buy_me_coffee">buy me coffee</string>
    <string name="call_for_support">Call for Support!</string>
    <string name="support_message">Hello there, I hope you are enjoying the application. You can support me by buying me coffee by clicking the button below, I will highly appreciate. The money will go into support for the application. Thank you!</string>
    <string name="thank_you_mssg">Thank you for downloading and supporting this app! We truly appreciate your trust and belief in our vision. Your feedback is valuable, and we\'re committed to delivering the best user experience. We are grateful to have you as part of the Sayari community.The application is in its beta release and some features may be wonky. Please be patient as we work on the latest updates. However do not let this deter your sence of exploration, please explore the app and share your feedback!</string>
    <string name="thank_you_ttl">Thank you!</string>
    <string name="api_warning_ttl">A Quick reminder.</string>
    <string name="api_warning_message">The launch information provided comes from the developer APIs. Therefore , the launch information may be stale (not updated) or not up to date in some scenarios. We are currently working to switch to up-to-date APIs that will provide accurate launch and event times. </string>

    <string name="update_install_error_message">Could not download the update at the moment. Please try again later.</string>
    <string name="update_error_title">Error installing update</string>

    <string name="update_install_warning">Update Required</string>
    <string name="update_install_warning_message">Dismissing this update will make you miss out on the latest features! This update will be shown again when app will be restarted.</string>

    <string name="copyright">\u2117 2023 – 2030 copyright</string>


</resources>