<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/textView6"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/settings_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsAppBarLayout" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settingsAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settingsTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryLightColor"
            android:backgroundTint="@color/white"
            app:elevation="0dp"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView44"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/display_subheading"
        android:textColor="#DD2C00"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView44"
        app:srcCompat="@drawable/ic_baseline_light_mode" />

    <TextView
        android:id="@+id/textView47"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/light_mode_text"
        android:textColor="@color/primaryLightColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.23000002" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/lightDarkModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:buttonTint="@color/secondaryColor"
        android:checked="false"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView47"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <View
        android:id="@+id/divider8"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/lightDarkModeSwitch"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/textView49"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notifications_subheading"
        android:textColor="#DD2C00"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/divider8"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <TextView
        android:id="@+id/textView50"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nots_from_fav_txt"
        android:textColor="@color/primaryLightColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/favCheckBox"
        app:layout_constraintStart_toStartOf="@+id/textView49"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <androidx.cardview.widget.CardView
        android:id="@+id/setupFavouritesCard"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/favCheckBox"
        app:layout_constraintStart_toStartOf="@+id/textView50"
        app:layout_constraintTop_toBottomOf="@+id/textView50">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_forward"
                app:tint="@color/primaryLightColor" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_favorite" />

            <TextView
                android:id="@+id/textView51"
                style="@style/Theme.SayariProject.TextAppearanceHeadings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/setup_your_favourite_agencies_txt"
                android:textColor="@color/primaryLightColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView54"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/show_notification_30_min_before_launch"
        android:textColor="@color/primaryLightColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/thrtyminCheckBox"
        app:layout_constraintStart_toStartOf="@+id/setupFavouritesCard"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <CheckBox
        android:id="@+id/thrtyminCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/secondaryColor"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView54"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView54"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView55"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/show_notification_15_min_before_launch"
        android:textColor="@color/primaryLightColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/fftnMinCheckBox"
        app:layout_constraintStart_toStartOf="@+id/textView54"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <CheckBox
        android:id="@+id/fftnMinCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/textView55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView55" />

    <TextView
        android:id="@+id/textView56"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/show_notification_5_min_before_launch"
        android:textColor="@color/primaryLightColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/fiveminCheckbox"
        app:layout_constraintStart_toStartOf="@+id/textView55"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <CheckBox
        android:id="@+id/fiveminCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/secondaryColor"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView56" />

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/setupFavouritesCard"
        app:layout_constraintStart_toStartOf="@+id/setupFavouritesCard"
        app:layout_constraintTop_toBottomOf="@+id/setupFavouritesCard" />

    <TextView
        android:id="@+id/textView57"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notification_intervals"
        android:textColor="#DD2C00"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/divider9"
        app:layout_constraintTop_toBottomOf="@+id/divider9" />

    <CheckBox
        android:id="@+id/favCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:buttonTint="@color/secondaryColor"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView50" />

    <View
        android:id="@+id/divider10"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/fiveminCheckbox"
        app:layout_constraintStart_toStartOf="@+id/textView56"
        app:layout_constraintTop_toBottomOf="@+id/textView56" />

    <androidx.cardview.widget.CardView
        android:id="@+id/privacyPolicyCardView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/divider10"
        app:layout_constraintStart_toStartOf="@+id/textView59"
        app:layout_constraintTop_toBottomOf="@+id/textView59"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_shield" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_forward"
                app:tint="@color/primaryLightColor" />

            <TextView
                android:id="@+id/textView58"
                style="@style/Theme.SayariProject.TextAppearanceHeadings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/view_privacy_policy"
                android:textColor="@color/primaryLightColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/privacy_policy"
        android:textColor="#DD2C00"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/divider10"
        app:layout_constraintTop_toBottomOf="@+id/divider10" />

</androidx.constraintlayout.widget.ConstraintLayout>