<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.NewsFragment">

    <TextView
        android:id="@+id/textView3"
        style="@style/Theme.SayariProject.TextAppearanceHeadings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/news_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsAppBarLayout" />

    <Button
        android:id="@+id/retryNewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondaryColor"
        android:fontFamily="@font/ubuntu"
        android:text="@string/retry_button_text"
        android:visibility="invisible"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/netErrorMessage"
        app:layout_constraintStart_toStartOf="@+id/netErrorMessage"
        app:layout_constraintTop_toBottomOf="@+id/netErrorMessage"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/netErrorImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/upcomingSwipeToRefresh"
        app:srcCompat="@drawable/ic_no_network"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/newsProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminateTint="@color/secondaryColor"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/retryNewsButton"
        app:layout_constraintStart_toStartOf="@+id/retryNewsButton"
        app:layout_constraintTop_toBottomOf="@+id/retryNewsButton"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/netErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/news_error_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/netErrorImage"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/newsSearchErrorTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/news_search_error"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/netErrorImage"
        tools:visibility="visible" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/upcomingSwipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsSearchTextViewLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/newsAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/newsTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryLightColor"
            android:backgroundTint="@color/white"
            app:elevation="0dp"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newsSearchTextViewLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/search_hint"
        app:boxStrokeColor="@color/secondaryColor"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newsSearchTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/moveUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:visibility="gone"
        app:backgroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_up"
        app:tint="@color/white"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>